Added .not-current class to dim previous and next month dates in current picker.

--- a/src/components/datepicker/datepicker.css
+++ b/src/components/datepicker/datepicker.css
@@ -172,6 +172,12 @@
         background: inherit;
       }
     }
+    .cell.not-current {
+      color: #c7c7c7;
+    &:hover{
+       background: inherit;
+     }
+    }
     .cell.day-header {
       font-size: 75%;
       white-space: nowrap;
